# concursos

./: .env  .env.example  Anotações.md  hello.py  langgraph.json  pyproject.toml
.ipynb_checkpoints/: Anotações-checkpoint.md  Meus testes-checkpoint.md
notebook/2025-07-30 ranking_olho_vaga/: Compara Rankings.ipynb  Copia Ranking.ipynb  Correlação Nome e Ranking.ipynb
notebook/2025-08-02 ranking_concurseiros/: copia_site_rankingconcurseiros.ipynb
notebook/2025-08-19 dvr/: DVR.ipynb
notebook/2025-09-14 junta_pdf/: Junta_PDF_FGV.ipynb  saida.xlsx
notebook/2025-10-23 cnpj_farmacia/: Analisa Farmacia.ipynb  processa_base_cnpj.ipynb
notebook/2025-10-26 gnucash/: Gnucash Python Ofx.ipynb  Teste GNUCash.ipynb  cartao_elo_teste.json  cartao_elo_teste.parquet  get_ofx.ipynb  tags.xlsx  trabalha_ofx.ipynb
notebook/2025-12-08 ultimas_noticias/: Últimas Noticias.ipynb
src/extractor_ranking/: main.py  rankings.yaml  requirements.txt
src/extractor_ranking/.ipynb_checkpoints/: main-checkpoint.py
