[project]
name = "concursos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.4",
    "jupyter>=1.1.1",
    "jupyter-resource-usage>=1.2.0",
    "num2words>=0.5.14",
    "pandas>=3.0.0",
    "psutil>=7.2.2",
    "pyarrow>=23.0.0",
    "pyinstaller>=6.18.0",
    "pypdf>=6.6.2",
    "pyperclip>=1.11.0",
    "pyyaml>=6.0.3",
    "reportlab>=4.4.9",
    "selenium>=4.40.0",
    "undetected-chromedriver>=3.5.5",
    "xmltodict>=1.0.4",
    "openpyxl>=3.1.5",
    "nicegui>=3.7.1",
    "playwright>=1.58.0",
    "oracledb>=3.4.2",
    "sqlalchemy>=2.0.47",
    "webdriver-manager>=4.0.2",
    "python-dotenv>=1.2.2",
    "langgraph>=1.0.10",
    "langchain-core>=1.2.17",
    "langchain-openai>=1.1.10",
    "streamlit>=1.19.0",
    "langgraph-api>=0.4.28",
]
